Fixed bug with more button z-index

--- a/src/client/app/response/anime-response/anime-response.component.scss
+++ b/src/client/app/response/anime-response/anime-response.component.scss
@@ -24,6 +24,7 @@
   right: 15%;
   bottom: auto;
   padding-top: 0;
+  z-index: 2;
 
   ul {
     bottom: 42px;
